--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Trabalho desenvolvido para disciplina de Desenvolvimento de Software na Universidade Federal de Pelotas (UFPel-RS). O AirbnbAnyLess é \"Tipo Airbnb\". Um Sistema Web que disponibiliza aos seus usuários um lugar onde possam colocar seus imóveis para alugar/vender e alugar/comprar os imóveis disponíveis na plataforma.",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "service mongod start; nodemon ./server.js",
+    "stop": "service mongod stop"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,8 @@
   },
   "homepage": "https://github.com/SouzaGuilherme/AirbnbAnyLess#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
